another round of adjustments
fixes some issues regarding worldgen
fixes some issues regarding cave subbiome detection
a pass at fixing animation gui